Update 'znt64rzvi-python' component image to: quay.io/rhtap_qe/rhtap-qe:1a5cfdffb4f6a4f183d8c17e02da02c485e75db6@sha256:5a4710b374aa26f4f6ed7902d0724a6d70a00ac0006ce58881a08dd7d926ddb6

--- a/components/znt64rzvi-python/overlays/development/deployment-patch.yaml
+++ b/components/znt64rzvi-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: znt64rzvi-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:1a5cfdffb4f6a4f183d8c17e02da02c485e75db6@sha256:5a4710b374aa26f4f6ed7902d0724a6d70a00ac0006ce58881a08dd7d926ddb6
+          name: container-image
